Lisätty H2-otsikko ja tekstiä index.html-tiedostoon ja lisätty h2-elementille tyylejä tyyli.css-tiedostoon. Mukana myös license.md, jossa l isenssitekstiä englanniksi.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <h1> Git-harjoittelua </h1>
 <p> Tässsä on esimerkkikappale, joka on kyllästyttävän pitkä... </p>
+<h2> tärkeää</h2><p>Tekstiä</p>
 </body>
 </html>
