Ensimmäinen lisäys, jossa ruotsinkielisen lisenssitekstin alkua.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <h1> Git-harjoittelua </h1>
 <p> Tässsä on esimerkkikappale, joka on kyllästyttävän pitkä... </p>
-<h2> tärkeää</h2><p>Tekstiä</p>
+<h2> tärkeää</h2><p>Tekstiä</p><p>Toinen tekstikappale, jota en jaksanut kirjoittaa loppuun asti, joten päättynee tähän. </p>
 </body>
 </html>
