Lisättiin kaikki tiedostot ja päivitettiin ne takaisin (sama kuin ennen reset HEAD~1-komennon antamista).

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <head>
-<title> otsikko </titile>
+<title> otsikko </title>
 <link rel="stylesheet" href="tyyli.css">
 </head>
 <h1> Git-harjoittelua </h1>
