Värimaailmaa muutettu yhdistämällä leiskakoe master-haaraan

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <h1> Git-harjoittelua </h1>
 <p> Tässsä on esimerkkikappale, joka on kyllästyttävän pitkä... </p>
-<h2> tärkeää</h2><p>Tekstiä</p><p>Toinen tekstikappale, jota en jaksanut kirjoittaa loppuun asti, joten päättynee tähän. </p>
+<h2> tärkeää</h2>
+<p>Tekstiä</p>
+<p>Toinen tekstikappale, jota en jaksanut kirjoittaa loppuun asti, joten päättynee tähän. </p>
+<h2>Uusi otsikko</h2>
+
+<p>Kappale, joka commitoidaan masteriin leiskakoe-branchin luomisen jälkeen.</p>
+<p> Muutos! Oletko valmis m uutokseen!!!!! </p>
+
+
 </body>
 </html>
