Lisätty mielipide kappaleeksi index.html-tiedoston loppuun.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <p>Kappale, joka commitoidaan masteriin leiskakoe-branchin luomisen jälkeen.</p>
 <p> Muutos! Oletko valmis m uutokseen!!!!! </p>
+<p> En ole, enkä tule olemaan! Hyi! </p>
 
 
 </body>
