Lisätty Matti Nykäsen lentävä lause 'Ehkä olen, ehkä en.' kappaleeksi index.html-tiedostoon. Komennossa käytetty -a -valitsinta, joka lataa muutokset automaattisesti paikalliseen git-varastoon).

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <p>Kappale, joka commitoidaan masteriin leiskakoe-branchin luomisen jälkeen.</p>
 <p> Muutos! Oletko valmis m uutokseen!!!!! </p>
-
+<p>Matti Nykäsen sanoin: "Ehkä olen, ehkä en. :)D </p>
 
 </body>
 </html>
